--- a/html/neiqingform.html
+++ b/html/neiqingform.html
@@ -31,7 +31,7 @@
 	$(document).ready(
 			function() {
 				$.mobile.loading('show');
-				$.hori.setHeaderTitle("表单");
+				$.hori.setHeaderTitle("集团内部请示报告");
 				var config = $.hori.getconfig();
 				var itcode = localStorage.getItem("Chinesename");
 				var template = localStorage.getItem("contemplate");
