--- a/html/queryList.html
+++ b/html/queryList.html
@@ -76,7 +76,7 @@
 						view = "vwDocByDate";
 						dataid = "querydataList";
 						dbpath="/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf";
-						Astart=Astart+5;
+						Astart=Astart+10;
 						start=Astart;
 					}
 					if(type=="querydoing"){
@@ -84,7 +84,7 @@
 						view = "vwDocByDate";
 						dataid = "querydataList";
 						dbpath="/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf";
-						Astart=Astart+5;
+						Astart=Astart+10;
 						start=Astart;
 					}
 					if(type=="querytoArchive"){
@@ -92,7 +92,7 @@
 						view = "vwtoArchive";
 						dataid = "querydataList";
 						dbpath="/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf";
-						Bstart=Bstart+5;
+						Bstart=Bstart+10;
 						start=Bstart;
 					}
 					if(type=="searchquerytoArchive"){
@@ -100,7 +100,7 @@
 						view = "vwtoArchive";
 						dataid = "querydataList";
 						dbpath="/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf";
-						Bstart=Bstart+5;
+						Bstart=Bstart+10;
 						start=Bstart;
 					}
 					if(type=="queryArchvied"){
@@ -108,7 +108,7 @@
 						view = "vwDocByArchvied";
 						dataid = "querydataList";
 						dbpath="/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf";
-						Cstart=Cstart+5;
+						Cstart=Cstart+10;
 						start=Cstart;
 					}
 					if(type=="searchqueryArchvied"){
@@ -116,7 +116,7 @@
 						view = "vwDocByArchvied";
 						dataid = "querydataList";
 						dbpath="/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf";
-						Cstart=Cstart+5;
+						Cstart=Cstart+10;
 						start=Cstart;
 					}
 					if(type=="signForDoing"){
@@ -124,7 +124,7 @@
 						view = "vwDocByDate";
 						dataid = "signdataList";
 						dbpath = localStorage.getItem("singdbPath");
-						dstart=dstart+5;
+						dstart=dstart+10;
 						start=dstart;
 					}
 					if(type=="searchsignForDoing"){
@@ -132,7 +132,7 @@
 						view = "vwDocByDate";
 						dataid = "signdataList";
 						dbpath = localStorage.getItem("singdbPath");
-						dstart=dstart+5;
+						dstart=dstart+10;
 						start=dstart;
 					}
 					if(type=="signtoArchive"){
@@ -140,7 +140,7 @@
 						view = "vwtoArchive";
 						dataid = "signdataList";
 						dbpath = localStorage.getItem("singdbPath");
-						estart=estart+5;
+						estart=estart+10;
 						start=estart;
 					}
 					if(type=="searchsigntoArchive"){
@@ -148,7 +148,7 @@
 						view = "vwtoArchive";
 						dataid = "signdataList";
 						dbpath = localStorage.getItem("singdbPath");
-						estart=estart+5;
+						estart=estart+10;
 						start=estart;
 					}
 					if(type=="signArchvied"){
@@ -156,7 +156,7 @@
 						view = "vwDocByArchived";
 						dataid = "signdataList";
 						dbpath = localStorage.getItem("singdbPath");
-						fstart=fstart+5;
+						fstart=fstart+10;
 						start=fstart;
 					}
 					if(type=="searchsignArchvied"){
@@ -164,15 +164,15 @@
 						view = "vwDocByArchived";
 						dataid = "signdataList";
 						dbpath = localStorage.getItem("singdbPath");
-						fstart=fstart+5;
+						fstart=fstart+10;
 						start=fstart;
 					}
 					var searchVal = localStorage.getItem("searchVal");
 					var searchkey = localStorage.getItem("searchkey");
 					if(searchVal=="no"){
-						var url=$.hori.getconfig().appServerHost+"view/oa/"+template+dbpath+"/myview?openform&view="+view+"&start="+start+"&count=15";
+						var url=$.hori.getconfig().appServerHost+"view/oa/"+template+dbpath+"/myview?openform&view="+view+"&start="+start+"&count=10";
 					}else if(searchVal=="yes"){
-						var url=$.hori.getconfig().appServerHost+"view/oa/"+template+dbpath+"/"+view+"?searchview&count=15&query="+searchkey+"&view="+view+"&start="+start;
+						var url=$.hori.getconfig().appServerHost+"view/oa/"+template+dbpath+"/"+view+"?searchview&count=10&query="+searchkey+"&view="+view+"&start="+start;
 					}
 					//alert(url);
 					$.hori.ajax({
@@ -246,7 +246,7 @@
 		$(document).ready(function(){
 			var hori = $.hori;
 			/*设置标题*/
-			hori.setHeaderTitle("公文查阅");
+			hori.setHeaderTitle("集团文件系统公文查阅");
 			//获取会签tab
 			getsignpath();
 			
@@ -314,7 +314,7 @@
 				view="vwDocByArchvied";
 			}
 			$.hori.hideLoading();
-			var url=$.hori.getconfig().appServerHost+"view/oa/"+template+"/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf/myview?openform&view="+view+"&start=1&count=5";
+			var url=$.hori.getconfig().appServerHost+"view/oa/"+template+"/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf/myview?openform&view="+view+"&start=1&count=10";
 			$.hori.ajax({
 				"type":"post",
 				"url":url,
@@ -379,7 +379,7 @@
 				localStorage.setItem("type","signArchvied");
 			}
 			var singdbPath = localStorage.getItem("singdbPath");
-			var url=$.hori.getconfig().appServerHost+"view/oa/"+template+"/"+singdbPath+"/myview?openform&view="+view+"&start=1&count=5";
+			var url=$.hori.getconfig().appServerHost+"view/oa/"+template+"/"+singdbPath+"/myview?openform&view="+view+"&start=1&count=10";
 			$.hori.hideLoading();
 			$.hori.ajax({
 				"type":"post",
@@ -472,7 +472,7 @@
 				template="searchqueryArchvied";
 			}
 			//
-			var url=$.hori.getconfig().appServerHost+"view/oa/"+template+"/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf/"+view+"?SearchView&count=5&Query="+searchkey+"&view="+view;
+			var url=$.hori.getconfig().appServerHost+"view/oa/"+template+"/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf/"+view+"?SearchView&count=10&Query="+searchkey+"&view="+view;
 			$.hori.ajax({
 				"type":"post",
 				"url":url,
@@ -520,7 +520,7 @@
 				localStorage.setItem("type","searchsignArchvied");
 			}
 			var singdbPath = localStorage.getItem("singdbPath");
-			var url=$.hori.getconfig().appServerHost+"view/oa/"+template+"/"+singdbPath+"/"+view+"?SearchView&count=5&Query="+searchkey+"&view="+view;
+			var url=$.hori.getconfig().appServerHost+"view/oa/"+template+"/"+singdbPath+"/"+view+"?SearchView&count=10&Query="+searchkey+"&view="+view;
 			//alert(url);
 			$.hori.ajax({
 				"type":"post",
