--- a/html/signform.html
+++ b/html/signform.html
@@ -34,7 +34,7 @@
 				try{
 				$.mobile.loading('show');
 				//$.hori.hideLoading();
-				$.hori.setHeaderTitle("表单");
+				$.hori.setHeaderTitle("集团文件系统会签处理单");
 				var config = $.hori.getconfig();
 				var itcode = localStorage.getItem("Chinesename");
 				var template = localStorage.getItem("contemplate");
