--- a/html/queryList.html
+++ b/html/queryList.html
@@ -71,6 +71,7 @@
 					var pullUpActionVal = localStorage.getItem("pullUpActionVal");
 					if(pullUpActionVal=="no"){
 						$.hori.loading("hide");
+						$.hori.hideLoading();
 						return false;
 					}
 					var dbpath = "";
