--- a/html/queryList.html
+++ b/html/queryList.html
@@ -65,11 +65,13 @@
 				}
 			}
 			function pullUpAction () {
+				$.hori.showLoading();
 				setTimeout(function () {
 					try{
 					var pullUpActionVal = localStorage.getItem("pullUpActionVal");
 					if(pullUpActionVal=="no"){
 						$.hori.loading("hide");
+						$.hori.hideLoading();
 						return false;
 					}
 					var type = localStorage.getItem("type");
