通讯录修改

--- a/html/contact.html
+++ b/html/contact.html
@@ -52,8 +52,8 @@
 					<li><font>ITCode：<span data-bind="text: ITCode"></span></font><br>
 						<font>用户名：<span data-bind="text: userName"></span></font><br>
 						<font>员工编号:<span data-bind="text: dialNumber"></span></font><br>
-						<font>移动电话：<a  data-bind="attr: {href:telNumber}"><span data-bind="text: telNumber"></span></a></font><br>
-						<font>办公电话：<a  data-bind="attr: {href:officeNumber}"><span data-bind="text: officeNumber"></span></a></font><br>
+						<font>移动电话：<a  data-bind="attr: {href:teltelNumber}"><span data-bind="text: telNumber"></span></a></font><br>
+						<font>办公电话：<a  data-bind="attr: {href:telofficeNumber}"><span data-bind="text: officeNumber"></span></a></font><br>
 
 					</li>
 				</ul>
