--- a/html/neiqingform.html
+++ b/html/neiqingform.html
@@ -9,10 +9,8 @@
 <link
 	href="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.css"
 	rel="stylesheet"></link>
-<link rel="stylesheet" href="assets/jquery.mobile-sugon.css" />
 <link href="../lib/jquery-mobile/jquery-mobile-fluid960.css"
 	rel="stylesheet"></link>
-<script type="application/javascript" src="assets/iscroll.js"></script>
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/jquery-cookie/jquery.cookie.js"></script>
 <script src="../lib/encrypt/encrypt.js"></script>
@@ -24,7 +22,6 @@
 <script src="../lib/knockout/knockout.mapping.js"></script>
 <script src="../lib/swiper/idangerous.swiper.min.js"></script>
 <script src="../config/web/config.js"></script>
-<script src="asset/js/bootstrap.min.js"></script>
 
 <script>
 	var jsonData = new Object();
@@ -38,6 +35,7 @@
 				var unid = localStorage.getItem("unid");
 				var loadurl = $.hori.getconfig().appServerHost + "view/oa/"
 						+ template+ "/" + unid;
+				//alert(loadurl);
 				$.hori.ajax({
 					"type" : "post",
 					"url" : loadurl,
@@ -48,8 +46,8 @@
 						res = res.replace(/&amp;nbsp;/g, "　");
 
 						var list = JSON.parse(res);
+						//alert(list.lianjie);
 						$(".content").html(list.content);
-						console.log(list.agyj);
 						var contentAgyj = list.agyj.replace(/意.*见/g,"意  见");
 						$("#agyjDiv").html(contentAgyj);
 						if (null != list.lianjie) {
