--- a/html/login.html
+++ b/html/login.html
@@ -338,30 +338,37 @@ a {
 						return;
 					}
 					$.hori
-							.getDeviceToken(function(resulttoken) {
-								if (resulttoken == "") {
-									//alert("无法获取设备token");
-									//return;
-								}
-								resulttoken = resulttoken.replace(/\s+/g, "");
-								$.hori
-										.ajax({
-											type : "POST",
-											url : $.hori.getconfig().appServerHost
-													+ "view/oa?data-action=regisdevice&data-device-type="
-													+ type
-													+ "&data-device-token="
-													+ resulttoken
-													+ "&data-device-id="
-													+ resultid
-													+ "&random="
-													+ Math.random(),
-											success : function(response) {
-											},
-											error : function(response) {
-											}
-										});
-							});
+	                    .getDeviceToken(function(resulttoken) {
+	                        if (resulttoken == "") {
+	                            //alert("无法获取设备token");
+	                            //return;
+	                        }
+	                        resulttoken = resulttoken.replace(/\s+/g, "");
+	                        var description = window.navigator.userAgent;
+	                        var resolution = window.screen.height + "*" + window.screen.width;
+	                        var url = $.hori.getconfig().appServerHost
+	                        + "view/oa?data-action=regisdevice&data-device-type="
+	                        + type
+	                        + "&data-device-token="
+	                        + resulttoken
+	                        + "&data-device-id="
+	                        + resultid
+	                        + "&data-device-resolution="
+	                        + resolution
+	                        + "&data-device-description="
+	                        + description
+	                        + "&random="
+	                        + Math.random();
+	                        $.hori
+	                                .ajax({
+	                                    type : "POST",
+	                                    url : url,
+	                                    success : function(response) {
+	                                    },
+	                                    error : function(response) {
+	                                    }
+	                                });
+	                    });
 				});
 	}
 	//忘记密码
