--- a/html/task.html
+++ b/html/task.html
@@ -22,7 +22,7 @@
 			position: fixed;
 			top: 0px;
 			bottom: 1.5em;
-			width: 90%;
+			width: 97.5%;
 			overflow: scroll;
 		}
 		
@@ -41,7 +41,8 @@
 					<div id="scroller" >
 						<div>
 						<br/>
-							<ul id="listcontent" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow" style="margin-top: 30px;">
+							<p style="margin-top: 30px;color: gray;text-align: left;">列表最多显示近期30个文件。</p>
+							<ul id="listcontent" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow" style="margin-top: -10px;">
 								
 							</ul>
 						</div>
