--- a/html/task.html
+++ b/html/task.html
@@ -30,7 +30,8 @@
 				<div id="wrapper" style="overflow: scroll;width: 90%;margin-left: -10px;height:100%;">
 					<div id="scroller">
 						<div>
-							<ul id="listcontent" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow" style="margin-top: 30px;">
+							<p id="thirtyList" style="margin-top: 30px;color: gray;text-align: left;display:none;">列表最多显示近期30个文件。</p>
+							<ul id="listcontent" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
 								
 							</ul>
 						</div>
