--- a/html/queryList.html
+++ b/html/queryList.html
@@ -268,6 +268,7 @@
 					$("#querySearch").css("display", "block");
 					$("#signselect").css("display", "none");
 					$("#signSearch").css("display", "none");
+					$("#querysearchKey").val("请输入关键字");
 				}
 				//会签
 				if(tabid=="signList"){
@@ -277,6 +278,7 @@
 					$("#signSearch").css("display", "block");
 					$("#queryselect").css("display", "none");
 					$("#querySearch").css("display", "none");
+					$("#signsearchKey").val("请输入关键字");
 				}
 		}})
 			var onlist=localStorage.getItem("click4");
@@ -338,6 +340,7 @@
 					localStorage.setItem("pullUpActionVal","yes");
 					fiteryear();
 					$("#moredata").hide();
+					$("#querysearchKey").val("请输入关键字");
 					myScroll.refresh();
 					signLoad=true;
 					$.hori.hideLoading();
@@ -400,6 +403,7 @@
 					localStorage.setItem("querydataListHide","signdataList");
 					localStorage.setItem("pullUpActionVal","yes");
 					$.hori.hideLoading();
+					$("#signsearchKey").val("请输入关键字");
                     fiteryear();
 					$("#moredata").hide();
 				},
@@ -461,6 +465,13 @@
 		
 		function querysearchlist(){
 			var searchkey=$("#querysearchKey").val();
+			if(searchkey == ''){
+				alert("请输入查询条件");
+				return;
+			}else if(searchkey == '请输入关键字'){
+				alert("请输入查询条件");
+				return;
+			}
 			localStorage.setItem("searchkey", searchkey);
 			//alert(searchkey);
 			var view = $('option:selected', '#querytype').val();
@@ -507,6 +518,13 @@
 		}
 		function signsearchlist(){
 			var searchkey=$("#signsearchKey").val();
+			if(searchkey == ''){
+				alert("请输入查询条件");
+				return;
+			}else if(searchkey == '请输入关键字'){
+				alert("请输入查询条件");
+				return;
+			}
 			localStorage.setItem("searchkey", searchkey);
 			//alert(searchkey);
 			var value = $('option:selected', '#signtype').val();
@@ -555,19 +573,29 @@
 		}
 		//搜索框 signsearchKey
 		function clearData2() {
-			$("#signsearchKey").val("");
+			var signsearchKeyVal = $("#signsearchKey").val();
+			$("#signsearchKey").css("color", "#0F0E0E");
+			if (signsearchKeyVal == "请输入关键字"){
+				$("#signsearchKey").val("");
+			} 
 		}
 		function showTips2() {
 			var signsearchKeyVal = $("#signsearchKey").val();
+			$("#signsearchKey").attr("style","color: #ADADAD;");
 			if (signsearchKeyVal == ""||signsearchKeyVal == " "){
 				$("#signsearchKey").val("请输入关键字");
 			} 
 		}
 		function clearData() {
-			$("#querysearchKey").val("");
+			var querysearchKeyVal = $("#querysearchKey").val();
+			$("#querysearchKey").attr("style","color: #0F0E0E;");
+			if (querysearchKeyVal == "请输入关键字"){
+				$("#querysearchKey").val("");
+			} 
 		}
 		function showTips() {
 			var querysearchKeyVal = $("#querysearchKey").val();
+			$("#querysearchKey").attr("style","color: #ADADAD;");
 			if (querysearchKeyVal == ""||querysearchKeyVal == " "){
 				$("#querysearchKey").val("请输入关键字");
 			} 
@@ -576,7 +604,7 @@
 		<style>
 		#wrapper {
 			position: fixed;
-			top: 190px;
+			top: 195px;
 			bottom: 48px;
 			width: 85%;
 			overflow: scroll;
