--- a/html/queryList.html
+++ b/html/queryList.html
@@ -523,10 +523,10 @@
 		function signsearchlist(){
 			var searchkey=$("#signsearchKey").val();
 			if(searchkey == ''){
-				alert("请输入查询条件");
+				alert("请输入关键字");
 				return;
 			}else if(searchkey == '请输入关键字'){
-				alert("请输入查询条件");
+				alert("请输入关键字");
 				return;
 			}
 			localStorage.setItem("searchkey", searchkey);
