--- a/html/queryList.html
+++ b/html/queryList.html
@@ -457,10 +457,10 @@
 		function querysearchlist(){
 			var searchkey=$("#querysearchKey").val();
 			if(searchkey == ''){
-				alert("请输入查询条件");
+				alert("请输入关键字");
 				return;
 			}else if(searchkey == '请输入关键字'){
-				alert("请输入查询条件");
+				alert("请输入关键字");
 				return;
 			}
 			$.hori.showLoading();
@@ -512,10 +512,10 @@
 		function signsearchlist(){
 			var searchkey=$("#signsearchKey").val();
 			if(searchkey == ''){
-				alert("请输入查询条件");
+				alert("请输入关键字");
 				return;
 			}else if(searchkey == '请输入关键字'){
-				alert("请输入查询条件");
+				alert("请输入关键字");
 				return;
 			}
 			$.hori.showLoading();
