--- a/html/queryList.html
+++ b/html/queryList.html
@@ -601,7 +601,7 @@
 		#wrapper {
 			position: fixed;
 			top: 190px;
-			bottom: 48px;
+			bottom: 10px;
 			width: 90%;
 			overflow: scroll;
 		}
@@ -635,7 +635,7 @@
 							<td width="93%" height="20px"><input id="querysearchKey" type="text" value="请输入关键字" style="color: #ADADAD;" onfocus="clearData()" onblur="showTips()"/></td>
 							<td><a href="#" onclick="querysearchlist()" data-role="button" data-mini='true' data-theme="f" class="ui-btn-corner-all ui-btn-up-c ui-btn-up-f ui-btn ui-btn-inline ui-shadow" style="color: white">搜索</a></td>
 						</tr>
-						<tr><td style="color: gray;">列表最多显示近期30个文件，更多请搜索。</td><tr>
+						<tr><td colspan="2" style="color: gray;font-size: 15px;">列表最多显示近期30个文件，更多请搜索</td><tr>
 					</table>
 				</div>
 				
@@ -656,14 +656,14 @@
 							<td width="93%" height="20px"><input id="signsearchKey" type="text" value="请输入关键字" style="color: #ADADAD;" onfocus="clearData2()" onblur="showTips2()"/></td>
 							<td><a href="#" onclick="signsearchlist()" data-role="button" data-inline="true" data-theme="f" class="ui-btn-corner-all ui-btn-up-c ui-btn-up-f ui-btn ui-btn-inline ui-shadow" style="color: white">搜索</a></td>
 						</tr>
-						<tr><td style="color: gray;">列表最多显示近期30个文件，更多请搜索。</td><tr>
+						<tr><td colspan="2" style="color: gray;font-size: 15px;">列表最多显示近期30个文件，更多请搜索</td><tr>
 					</table>
 				</div>
 				<div id="wrapper">
 					<div id="scroller">
 						<div id="pullDown"></div>
 			      <div id="two">
-						<ul id="querydataList"  data-role="listview" data-inset="true" style="margin-top: 1px;">
+						<ul id="querydataList"  data-role="listview" data-inset="true" style="margin-top: 25px;">
 							<li id="moredata" style="display:none"><div id="pullUp" align="center">
 								<span class="pullUpLabel">上划加载更多...</span>
 							</div></li>
@@ -671,7 +671,7 @@
 						<br/>
 			      </div>
 			      <div id="three">
-					   <ul id="signdataList" data-role="listview" data-inset="true" style="margin-top: 1px;">
+					   <ul id="signdataList" data-role="listview" data-inset="true" style="margin-top: 25px;">
 							<li id="moredata" style="display:none"><div id="pullUp" align="center" >
 									<span class="pullUpLabel">上划加载更多...</span>
 								</div></li>
