--- a/html/task.html
+++ b/html/task.html
@@ -41,7 +41,7 @@
 					<div id="scroller" >
 						<div>
 						<br/>
-							<p style="margin-top: 30px;color: gray;text-align: left;">列表最多显示近期30个文件。</p>
+							<p style="margin-top: 30px;color: gray;text-align: left;">列表最多显示近期30个文件</p>
 							<ul id="listcontent" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow" style="margin-top: -10px;">
 								
 							</ul>
