--- a/html/queryList.html
+++ b/html/queryList.html
@@ -642,7 +642,7 @@
 							<td width="93%" height="20px"><input id="querysearchKey" type="text" value="请输入关键字" style="color: #ADADAD;" onfocus="clearData()" onblur="showTips()"/></td>
 							<td><a href="#" onclick="querysearchlist()" data-role="button" data-mini='true' data-theme="f" class="ui-btn-corner-all ui-btn-up-c ui-btn-up-f ui-btn ui-btn-inline ui-shadow" style="color: white">搜索</a></td>
 						</tr>
-						<tr><td style="color: gray;">列表最多显示近期30个文件，更多请搜索。</td><tr>
+						<tr><td colspan="2" style="color: gray;font-size: 15px;">列表最多显示近期30个文件，更多请搜索</td><tr>
 					</table>
 				</div>
 				<div id="signselect" align="center" class="ui-grid-b" style="display:none">
@@ -662,7 +662,7 @@
 							<td width="93%" height="20px"><input id="signsearchKey" type="text" value="请输入关键字" style="color: #ADADAD;" onfocus="clearData2()" onblur="showTips2()"/></td>
 							<td><a href="#" onclick="signsearchlist()" data-role="button" data-inline="true" data-theme="f" class="ui-btn-corner-all ui-btn-up-c ui-btn-up-f ui-btn ui-btn-inline ui-shadow" style="color: white">搜索</a></td>
 						</tr>
-						<tr><td style="color: gray;">列表最多显示近期30个文件，更多请搜索。</td><tr>
+						<tr><td colspan="2" style="color: gray;font-size: 15px;">列表最多显示近期30个文件，更多请搜索</td><tr>
 					</table>
 				</div>
 				<div id="wrapper">
