--- a/html/taskList.html
+++ b/html/taskList.html
@@ -224,11 +224,11 @@
 			overflow: scroll;
 			top: 100px;
 			bottom: 1.5em;
-			width: 98%;
+			width: 97%;
 		}
-		.ui-content .ui-listview-inset, .ui-panel-inner.ui-listview-inset {
+		/*.ui-content .ui-listview-inset, .ui-panel-inner.ui-listview-inset {
 			margin: 0em 0;
-		}
+		}*/
 	</style>
 </head>
 <body>
