--- a/html/annouceList.html
+++ b/html/annouceList.html
@@ -18,8 +18,9 @@
 		#wrapper {
 			position: fixed;
 			top: 0px;
+			left: 0px;
 			bottom: 1.5em;
-			width: 98%;
+			width: 100%;
 			overflow: scroll;
 		}
 	</style>
