首页后退按钮

--- a/html/home.html
+++ b/html/home.html
@@ -89,7 +89,7 @@ var icount=0;
 			/*设置标题*/
 			hori.setHeaderTitle("首页");
 			/*隐藏后退按钮*/
-			hori.hideBackBtn();
+			//hori.hideBackBtn();
 			/*注册注销事件*/
 			hori.registerEvent("case", "navButtonTouchUp", function() {
 				hori.backPage(1);
